fix: mobile resolution content overflow (#6139)

--- a/styles/old/layout/main.css
+++ b/styles/old/layout/main.css
@@ -13,6 +13,7 @@
   #main {
     .container {
       margin: 1em 20px;
+      width: calc(100% - 40px);
     }
   }
 }
